# nt-time

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  CHANGELOG.adoc  CONTRIBUTING.adoc  COPYRIGHT  Cargo.toml  README.md  clippy.toml  justfile  rustfmt.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: CI.yaml  REUSE.yaml  SemverChecks.yaml  actionlint.yaml  just.yaml  mirror.yaml  tombi.yaml
LICENSES/: MIT.txt
benches/: cmp.rs  convert.rs  dos_date_time.rs  file_time.rs  ops.rs  rand.rs  str.rs  unix_time.rs
examples/: README.adoc  date.rs  dos2ft.rs  format.rs  ft2dos.rs  ft2unix.rs  lszip.rs  nt2unix.rs  parse.rs  unix2ft.rs  unix2nt.rs  zip_timestamp.rs
src/: error.rs  file_time.rs  filetime.rs  lib.rs  serde.rs  serde_with.rs
src/file_time/: cmp.rs  consts.rs  convert.rs  dos_date_time.rs  fmt.rs  ops.rs  rand.rs  serde.rs  str.rs  unix_time.rs
src/serde/: iso_8601.rs  rfc_2822.rs  rfc_3339.rs  unix_time.rs
src/serde/iso_8601/: option.rs
src/serde/rfc_2822/: option.rs
src/serde/rfc_3339/: option.rs
src/serde/unix_time/: option.rs
src/serde_with/: iso_8601.rs  rfc_2822.rs  rfc_3339.rs  unix_time.rs
src/serde_with/iso_8601/: option.rs
src/serde_with/rfc_2822/: option.rs
src/serde_with/rfc_3339/: option.rs
src/serde_with/unix_time/: microseconds.rs  milliseconds.rs  nanoseconds.rs  option.rs
src/serde_with/unix_time/microseconds/: option.rs
src/serde_with/unix_time/milliseconds/: option.rs
src/serde_with/unix_time/nanoseconds/: option.rs
