# SPDX-FileCopyrightText: 2023 Shun Sakai
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "nt-time"
version = "0.11.1"
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2024"
rust-version = "1.85.0"
description = "A Windows file time library"
documentation = "https://docs.rs/nt-time"
readme = "README.md"
repository = "https://github.com/sorairolake/nt-time"
license = "Apache-2.0 OR MIT"
keywords = ["date", "time", "windows"]
categories = ["date-and-time", "no-std"]
include = ["/LICENSES", "/README.md", "/src"]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "dos2ft"
path = "examples/dos2ft.rs"
required-features = ["std"]

[[example]]
name = "format"
path = "examples/format.rs"
required-features = ["std"]

[[example]]
name = "ft2dos"
path = "examples/ft2dos.rs"
required-features = ["std"]

[[example]]
name = "ft2unix"
path = "examples/ft2unix.rs"
required-features = ["std"]

[[example]]
name = "parse"
path = "examples/parse.rs"
required-features = ["std"]

[[example]]
name = "unix2ft"
path = "examples/unix2ft.rs"
required-features = ["std"]

[dependencies]
chrono = { version = "0.4.40", default-features = false, optional = true }
jiff = { version = "0.2.4", default-features = false, optional = true }
rand = { version = "0.9.0", default-features = false, optional = true }
serde = { version = "1.0.219", default-features = false, features = ["derive"], optional = true }
time = { version = "0.3.39", default-features = false, features = ["macros"] }

[dev-dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
proptest = "1.6.0"
proptest-derive = "0.5.1"
serde_json = "1.0.140"
serde_test = "1.0.177"
test-strategy = "0.4.0"
time = { version = "0.3.39", features = ["parsing"] }

[features]
default = ["std"]
chrono = ["dep:chrono"]
jiff = ["dep:jiff"]
large-dates = ["time/large-dates"]
rand = ["dep:rand"]
serde = ["dep:serde"]
serde-human-readable = ["serde", "time/serde-human-readable"]
std = ["chrono?/std", "jiff?/std", "rand?/std", "time/std"]

[lints.clippy]
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[lints.rust]
missing_debug_implementations = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"
