# SPDX-FileCopyrightText: 2023 Shun Sakai
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "nt-time"
version = "0.12.1"
edition = "2024"
rust-version = "1.85.0"
description = "A Windows file time library"
documentation = "https://docs.rs/nt-time"
repository = "https://github.com/sorairolake/nt-time"
license = "Apache-2.0 OR MIT"
keywords = ["date", "time", "windows"]
categories = ["date-and-time", "no-std"]
include = ["/LICENSES", "/README.md", "/src"]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "dos2ft"
required-features = ["std"]

[[example]]
name = "format"
required-features = ["std"]

[[example]]
name = "ft2dos"
required-features = ["std"]

[[example]]
name = "ft2unix"
required-features = ["std"]

[[example]]
name = "parse"
required-features = ["std"]

[[example]]
name = "unix2ft"
required-features = ["std"]

[dependencies]
chrono = { version = "0.4.42", default-features = false, optional = true }
jiff = { version = "0.2.15", default-features = false, optional = true }
rand = { version = "0.9.2", default-features = false, optional = true }
serde = { version = "1.0.226", default-features = false, optional = true }
time = { version = "0.3.43", default-features = false }

[dev-dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
proptest = "1.7.0"
proptest-derive = "0.6.0"
rand_pcg = "0.9.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde_test = "1.0.177"
test-strategy = "0.4.3"
time = { version = "0.3.43", features = ["macros", "parsing"] }

[features]
default = ["std"]
chrono = ["dep:chrono"]
jiff = ["dep:jiff"]
large-dates = ["time/large-dates"]
rand = ["dep:rand"]
serde = ["dep:serde"]
serde-human-readable = ["serde", "time/serde-human-readable"]
std = ["chrono?/std", "jiff?/std", "rand?/std", "time/std"]

[lints.clippy]
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[lints.rust]
missing_debug_implementations = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"
