# SPDX-FileCopyrightText: 2023 Shun Sakai
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "nt-time"
version = "0.13.0"
edition = "2024"
rust-version = "1.85.0"
description = "A Windows file time library"
documentation = "https://docs.rs/nt-time"
repository = "https://github.com/sorairolake/nt-time"
license = "Apache-2.0 OR MIT"
keywords = ["date", "time", "windows"]
categories = ["date-and-time", "no-std"]
include = ["/LICENSES", "/README.md", "/src"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
chrono = { version = "0.4.42", default-features = false, optional = true }
dos-date-time = { version = "0.2.0", default-features = false, optional = true }
jiff = { version = "0.2.16", default-features = false, optional = true }
rand = { version = "0.9.2", default-features = false, optional = true }
serde = { version = "1.0.228", default-features = false, optional = true }
time = { version = "0.3.44", default-features = false }

[dev-dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
proptest = "1.9.0"
proptest-derive = "0.7.0"
rand_pcg = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_test = "1.0.177"
test-strategy = "0.4.3"
time = { version = "0.3.44", features = ["macros", "parsing"] }

[features]
default = ["dos-date-time", "std"]
chrono = ["dep:chrono"]
dos-date-time = ["dep:dos-date-time"]
jiff = ["dep:jiff"]
large-dates = ["time/large-dates"]
rand = ["dep:rand"]
serde = ["dep:serde"]
serde-human-readable = ["serde", "time/serde-human-readable"]
std = [
  "chrono?/std",
  "dos-date-time?/std",
  "jiff?/std",
  "rand?/std",
  "time/std",
]

[lints.clippy]
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[lints.rust]
missing_debug_implementations = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"
